Handle username in texts

--- a/pages/210203010.md
+++ b/pages/210203010.md
@@ -4,22 +4,22 @@
 
 ![plain.png](../images/backgrounds/plain.png)
 
-【%(userName)s】
+【ユーザー名】
 今日も世界は平和だ
 
-【%(userName)s】
+【ユーザー名】
 もちろん小さな争いごとはあるけれど
 概ね穏やかに暮らしている
 
-【%(userName)s】
+【ユーザー名】
 皆が幸せに過ごせる世界
 そんな理想郷みたいな日々が続いて
 いるのに…
 
-【%(userName)s】
+【ユーザー名】
 何故か満たされない自分がいた
 
-【%(userName)s】
+【ユーザー名】
 どうしてなのかは分からない
 ただ…
 ずっと心に引っ掛かっている…
