--- a/pages/210203020.md
+++ b/pages/210203020.md
@@ -4,26 +4,26 @@
 
 ![plain.png](../images/backgrounds/plain.png)
 
-【%(userName)s】
+【ユーザー名】
 それからずっと捜し続けた
 
-【%(userName)s】
+【ユーザー名】
 名前も顔も思い出せない
 「彼女」のことを
 
-【%(userName)s】
+【ユーザー名】
 本当に存在しているのかすら
 分からない…そんな相手を
 
-【%(userName)s】
+【ユーザー名】
 それは…あまりに無謀な…
 絶望的な旅だった
 
-【%(userName)s】
+【ユーザー名】
 希望はなかった
 見つかる可能性は…０％だった
 
-【%(userName)s】
+【ユーザー名】
 それでも…
 
 ![ghost_town.png](../images/backgrounds/ghost_town.png)
@@ -156,7 +156,7 @@
 
 ![ghost_town.png](../images/backgrounds/ghost_town.png)
 
-【%(userName)s】
+【ユーザー名】
 そうだ、「彼女」の名前は――
 
 選択肢:
@@ -203,23 +203,23 @@
 
 ![plain.png](../images/backgrounds/plain.png)
 
-【%(userName)s】
+【ユーザー名】
 走った
 走った
 走った
 
-【%(userName)s】
+【ユーザー名】
 ティルフィングの下へ
 たった一人の、かけがえない存在の
 いる地へ
 
-【%(userName)s】
+【ユーザー名】
 ただ、ひたすらに
 走り続けて――
 
 ![flower_garden.png](../images/backgrounds/flower_garden.png)
 
-【%(userName)s】
+【ユーザー名】
 そこに、辿り着いた
 
 <img src="../images/units/5101431.png" alt="5101431.png" height="34"/>
@@ -256,11 +256,11 @@
 
 #### select_label_03:
 
-【%(userName)s】
+【ユーザー名】
 君の声がみんなに届いたんだよ
 だから思い出すことができた
 
-【%(userName)s】
+【ユーザー名】
 ティルフィング、
 君はもう一人じゃない
 みんなが、側にいる
@@ -294,7 +294,7 @@
 
 #### select_label_04:
 
-【%(userName)s】
+【ユーザー名】
 みんなも、きっと心の奥底で
 君を捜していたんだ
 だって――
@@ -338,16 +338,16 @@
 
 ![flower_garden.png](../images/backgrounds/flower_garden.png)
 
-【%(userName)s】
+【ユーザー名】
 君を忘れることなんて、
 できるわけがないんだから
 
-【%(userName)s】
+【ユーザー名】
 君のおかげで世界も、思い出も
 みんなの絆も分断されずに
 紡がれたんだ
 
-【%(userName)s】
+【ユーザー名】
 たくさんの思い出が、
 今も胸に残っている
 それを君と話したかった
