--- a/pages/2750001.md
+++ b/pages/2750001.md
@@ -47,7 +47,7 @@
 <img src="../images/units/103211.png" alt="103211.png" height="34"/>
 【サクラ】
 そっか～…
-%(userName)s
+[ユーザー名]
 とりあえず、よろしく～！
 
 <img src="../images/units/103211.png" alt="103211.png" height="34"/>
@@ -74,7 +74,7 @@
 【ティルフィング】
 構いませんよ
 サクラさんにクロエさん
-それから、%(userName)sさん
+それから、[ユーザー名]さん
 
 <img src="../images/units/103311.png" alt="103311.png" height="34"/>
 【クロエ】
