--- a/pages/2750004.md
+++ b/pages/2750004.md
@@ -80,7 +80,7 @@
 <img src="../images/units/103211.png" alt="103211.png" height="34"/>
 【サクラ】
 わわっ？なんで
-%(userName)sが
+[ユーザー名]が
 真っ先に答えるのよ！
 
 #### select_label_02:
@@ -88,7 +88,7 @@
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
 【レナ】
-…%(userName)s
+…[ユーザー名]
 馴れ馴れしい
 
 #### select_label_end1:
@@ -96,13 +96,13 @@
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
 フフフ
-%(userName)s
+[ユーザー名]
 さんも…
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
 あ、いえ
-%(userName)sも
+[ユーザー名]も
 仲間ですから
 
 <img src="../images/units/103211.png" alt="103211.png" height="34"/>
@@ -264,14 +264,14 @@
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
 レナ、どうぞ真ん中に
-%(userName)s、
+[ユーザー名]、
 よろしくお願いします
 
 選択肢:
 - シャッターボタンを押す → [select_label_05](#select_label_05)へ
 
 レナ、どうぞ真ん中に
-%(userName)s、
+[ユーザー名]、
 よろしくお願いします
 
 #### select_label_05:
@@ -286,7 +286,7 @@
 
 <img src="../images/units/103211.png" alt="103211.png" height="34"/>
 【サクラ】
-%(userName)s
+[ユーザー名]
 やるね～
 
 <img src="../images/units/103311.png" alt="103311.png" height="34"/>
@@ -336,7 +336,7 @@
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
 【レナ】
 なんだ
-%(userName)sか…
+[ユーザー名]か…
 アナタも眠れないの？
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
