--- a/pages/2750005.md
+++ b/pages/2750005.md
@@ -32,7 +32,7 @@
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
 【レナ】
-%(userName)s、
+[ユーザー名]、
 キモいよ…
 
 #### select_label_02:
