--- a/pages/2750007.md
+++ b/pages/2750007.md
@@ -218,7 +218,7 @@
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
 【レナ】
 ティルと…クロエと…サクラと…
-%(userName)sと
+[ユーザー名]と
 一緒にいるのは楽しかったんだよ！
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
@@ -252,7 +252,7 @@
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
-%(userName)s…
+[ユーザー名]…
 アナタにまで辛い決断を
 させてしまいましたね
 
@@ -261,7 +261,7 @@
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
-%(userName)s…
+[ユーザー名]…
 ありがとうございます
 その言葉だけで十分です
 
