--- a/pages/2750008.md
+++ b/pages/2750008.md
@@ -57,7 +57,7 @@
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
-%(userName)sも
+[ユーザー名]も
 お疲れ様でした
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
