--- a/pages/2750009.md
+++ b/pages/2750009.md
@@ -94,7 +94,7 @@
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
 【レナ】
-%(userName)s
+[ユーザー名]
 …そんなの…辛いだけだよ
 
 #### select_label_04:
@@ -102,14 +102,14 @@
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
 【レナ】
-%(userName)s
+[ユーザー名]
 …そんなの…あるわけない
 
 #### select_label_end2:
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
-%(userName)s
+[ユーザー名]
 下がって！…私がやります！
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
@@ -193,14 +193,14 @@
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
-%(userName)s
+[ユーザー名]
 どうしてあんなことを？
 
 選択肢:
 - これまでのことを話す → [select_label_05](#select_label_05)へ
 - ウロボロスとの話を伝える → [select_label_06](#select_label_06)へ
 
-%(userName)s
+[ユーザー名]
 どうしてあんなことを？
 
 #### select_label_05:
