--- a/pages/2750010.md
+++ b/pages/2750010.md
@@ -22,7 +22,7 @@
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
-%(userName)sの
+[ユーザー名]の
 話によると、ここでは三つの世界が
 重なっています
 
