--- a/pages/2750011.md
+++ b/pages/2750011.md
@@ -88,13 +88,13 @@
 <img src="../images/units/103311.png" alt="103311.png" height="34"/>
 【クロエ】
 ここでなければならなかった理由…
-%(userName)sが
+[ユーザー名]が
 三つの世界を巡ってくれたおかげで
 
 <img src="../images/units/103211.png" alt="103211.png" height="34"/>
 【サクラ】
 ここでは三つの世界が重なってる！
-%(userName)sが
+[ユーザー名]が
 結びつけてくれたから！
 
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
