--- a/pages/2750012.md
+++ b/pages/2750012.md
@@ -124,7 +124,7 @@
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
 本当に…
-%(userName)sの
+[ユーザー名]の
 おかげですね
 
 <img src="../images/units/601611.png" alt="601611.png" height="34"/>
@@ -257,14 +257,14 @@
 <img src="../images/units/101411.png" alt="101411.png" height="34"/>
 【ティルフィング】
 サクラ、クロエ、またいつか…
-%(userName)sも
+[ユーザー名]も
 
 選択肢:
 - いつでも会えるよ → [select_label_01](#select_label_01)へ
 - またね → [select_label_02](#select_label_02)へ
 
 サクラ、クロエ、またいつか…
-%(userName)sも
+[ユーザー名]も
 
 #### select_label_01:
  → [select_label_end](#select_label_end)へ
