--- a/pages/2770010.md
+++ b/pages/2770010.md
@@ -118,7 +118,7 @@
 
 <img src="../images/units/602111.png" alt="602111.png" height="34"/>
 【リズベット】
-%(userName)sさんも？
+[ユーザー名]さんも？
 
 <img src="../images/units/401511.png" alt="401511.png" height="34"/>
 【ユリ】
