--- a/pages/2770020.md
+++ b/pages/2770020.md
@@ -177,7 +177,7 @@
 
 <img src="../images/units/602111.png" alt="602111.png" height="34"/>
 【リズベット】
-%(userName)sさんは
+[ユーザー名]さんは
 わたしの分まで“考える役”
 っていうのはどうでしょう？
 
@@ -549,7 +549,7 @@
 
 <img src="../images/units/100261.png" alt="100261.png" height="34"/>
 【レーヴァテイン】
-…%(userName)s
+…[ユーザー名]
 コンパスの針はどっちを差してる？
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
@@ -638,13 +638,13 @@
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
 海賊の船長といったら帽子でしょ？
-%(userName)sのため、
+[ユーザー名]のため、
 コンパスと一緒に用意しといたから
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
 あっ、間違えました、
-%(userName)sじゃなくて…
+[ユーザー名]じゃなくて…
 船長
 
 …やめてほしい
