--- a/pages/2770030.md
+++ b/pages/2770030.md
@@ -144,7 +144,7 @@
 
 <img src="../images/units/401511.png" alt="401511.png" height="34"/>
 【ユリ】
-%(userName)s！
+[ユーザー名]！
 こちらへ！！
 
 次から次へと襲い来る物の怪達
@@ -544,7 +544,7 @@
 <img src="../images/units/100261.png" alt="100261.png" height="34"/>
 【レーヴァテイン】
 アマテラス！…でもそれじゃ、
-%(userName)sの
+[ユーザー名]の
 身は誰が…！？
 
 <img src="../images/units/602111.png" alt="602111.png" height="34"/>
@@ -555,7 +555,7 @@
 
 <img src="../images/units/401511.png" alt="401511.png" height="34"/>
 【ユリ】
-戦えない%(userName)sが
+戦えない[ユーザー名]が
 無茶してるんですもの
 甘えたこと、言ってられませんわ
 
@@ -571,7 +571,7 @@
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
-（…やっぱり、%(userName)sには
+（…やっぱり、[ユーザー名]には
 この船の船長としての力がある…！）
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
@@ -581,12 +581,12 @@
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
-（%(userName)sの言葉で
+（[ユーザー名]の言葉で
 元に戻っていたみたいだし…）
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
-（%(userName)sこそが
+（[ユーザー名]こそが
 “堕罪者”に勝つ
 切り札となるかも…）
 
