--- a/pages/2770040.md
+++ b/pages/2770040.md
@@ -40,7 +40,7 @@
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
 （ただ一人、
-%(userName)sを
+[ユーザー名]を
 除いて…）
 
 あともう少しで『宵の間』だ
@@ -63,7 +63,7 @@
 
 <img src="../images/units/401511.png" alt="401511.png" height="34"/>
 【ユリ】
-…でも%(userName)sさんが
+…でも[ユーザー名]さんが
 そう言うなら
 そうなのかもしれませんわね！
 
