--- a/pages/2770042.md
+++ b/pages/2770042.md
@@ -38,11 +38,11 @@
 【アマテラス】
 …普通なら、だけども
 でも、みんなには、
-%(userName)sがいる…
+[ユーザー名]がいる…
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
-%(userName)sなら、
+[ユーザー名]なら、
 みんなの心に光を与えることが
 できるはずだから…
 
@@ -110,7 +110,7 @@
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
-お願い！　%(userName)s！
+お願い！　[ユーザー名]！
 みんなを…！
 私の仲間を助けて！！
 
