--- a/pages/2770052.md
+++ b/pages/2770052.md
@@ -514,7 +514,7 @@
 
 <img src="../images/units/100261.png" alt="100261.png" height="34"/>
 【レーヴァテイン】
-%(userName)s…
+[ユーザー名]…
 その次の航海も、また被ってくれる？
 この…海賊帽を
 
