--- a/pages/2770060.md
+++ b/pages/2770060.md
@@ -373,7 +373,7 @@
 <img src="../images/units/602111.png" alt="602111.png" height="34"/>
 【リズベット】
 …それで決まりだね！
-%(userName)sさん
+[ユーザー名]さん
 行こう！！
 
 <img src="../images/units/602111.png" alt="602111.png" height="34"/>
