--- a/pages/310010050.md
+++ b/pages/310010050.md
@@ -25,51 +25,51 @@
 明日の数学ってさ
 確か――
 
-【%(userName)s】
+【ユーザー名】
 …………
 
-【%(userName)s】
+【ユーザー名】
 この町も賑やかだ
 
-【%(userName)s】
+【ユーザー名】
 行き交う人々の喧噪が耳に心地よい
 
-【%(userName)s】
+【ユーザー名】
 風に乗って流れてくる
 美味しそうな食べ物の匂いに
 つい足を向けそうになる
 
-【%(userName)s】
+【ユーザー名】
 今夜はこの町に泊まろう
 
-【%(userName)s】
+【ユーザー名】
 ティルフィングと再会してから、
 また長い年月が過ぎた
 
-【%(userName)s】
+【ユーザー名】
 あのとき、ずっと一緒にいるという
 約束を交わしたことで
 
-【%(userName)s】
+【ユーザー名】
 人の身でありながら、
 今もこうして生きている
 
-【%(userName)s】
+【ユーザー名】
 ティルフィングは基本
 ユグドラシルの中で
 世界を見守っている
 
-【%(userName)s】
+【ユーザー名】
 だから自分は、
 たまに住む場所を変えながら
 人々の暮らしを見て回ることにした
 
-【%(userName)s】
+【ユーザー名】
 世界はすっかり落ち着いて、
 キル姫達も楽しそうに
 暮らしているようだ
 
-【%(userName)s】
+【ユーザー名】
 こんな時間がずっと続けば良い
 本当に、そう思う
 
@@ -77,7 +77,7 @@
 【ティルフィング】
 …マスター
 
-【%(userName)s】
+【ユーザー名】
 …？
 
 <img src="../images/units/6101411.png" alt="6101411.png" height="34"/>
