--- a/pages/310010060.md
+++ b/pages/310010060.md
@@ -21,7 +21,7 @@
 マスター様の専属補佐官として
 完璧にサポートしてみせますので
 
-【%(userName)s】
+【ユーザー名】
 …………
 
 ![yggdrasill_interior.png](../images/backgrounds/yggdrasill_interior.png)
