--- a/pages/310021020.md
+++ b/pages/310021020.md
@@ -184,7 +184,7 @@
 
 <img src="../images/units/1100211.png" alt="1100211.png" height="34"/>
 【ゼロ】
-…%(userName)s
+…[ユーザー名]
 久し振りだな
 
 <img src="../images/units/1100211.png" alt="1100211.png" height="34"/>
