--- a/pages/310021030.md
+++ b/pages/310021030.md
@@ -102,7 +102,7 @@
 
 <img src="../images/units/1100211.png" alt="1100211.png" height="34"/>
 【ゼロ】
-%(userName)s…
+[ユーザー名]…
 お前が抱きかかえているのは…
 いや、まさか…
 
