--- a/pages/416101010.md
+++ b/pages/416101010.md
@@ -213,7 +213,7 @@
 
 【ゼロ】
 お前もよくやってくれたな
-「%(userName)s」
+「[ユーザー名]」
 
 【ゼロ】
 お前がティルフィングとともに
@@ -273,7 +273,7 @@
 【ゼロ】
 何でもない…
 じゃあな、ティルフィング、デュリン
-「%(userName)s」
+「[ユーザー名]」
 
 <img src="../images/units/100221.png" alt="100221.png" height="34"/>
 【レーヴァテイン】
