--- a/pages/520061212.md
+++ b/pages/520061212.md
@@ -6,7 +6,7 @@
 
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
 【ユグドラシル】
-「%(userName)s」が
+「[ユーザー名]」が
 天上世界で目を覚まして
 どれほどの年月が経ったのでしょう…
 
