--- a/pages/520061213.md
+++ b/pages/520061213.md
@@ -23,7 +23,7 @@
 
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
 【ユグドラシル】
-「%(userName)s」
+「[ユーザー名]」
 
 【マスター】
 ……ユグドラシル
@@ -178,7 +178,7 @@
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
 【ユグドラシル】
 さよなら
-「%(userName)s」
+「[ユーザー名]」
 
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
 【ユグドラシル】
