--- a/pages/7010025.md
+++ b/pages/7010025.md
@@ -42,7 +42,7 @@
 
 <img src="../images/units/960031.png" alt="960031.png" height="34"/>
 【トライエル】
-さぁ、%(userName)s…
+さぁ、[ユーザー名]…
 あなたの旅もこれで終わりです！
 
 Next: [7010026](7010026.md)
