--- a/pages/7010030.md
+++ b/pages/7010030.md
@@ -37,7 +37,7 @@
 <img src="../images/units/960032.png" alt="960032.png" height="34"/>
 【トライエル】
 神の力の真髄をお見せします
-さあ、%(userName)s…
+さあ、[ユーザー名]…
 アナタの旅も終焉です
 
 Next: [7010031](7010031.md)
