--- a/pages/210202100.md
+++ b/pages/210202100.md
@@ -46,7 +46,7 @@
 【ユグドラシル】
 あなたよ
 私から生まれ、旅立った者
-「%(userName)s」
+「[ユーザー名]」
 
 <img src="../images/units/5101431.png" alt="5101431.png" height="34"/>
 【ティルフィング】
@@ -116,7 +116,7 @@
 
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
 【ユグドラシル】
-「%(userName)s」
+「[ユーザー名]」
 ユグドラシルとしてのあなたの
 権能を使って
 
@@ -208,7 +208,7 @@
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
 【ユグドラシル】
 それから、方舟を造ってしまえば
-「%(userName)s」は
+「[ユーザー名]」は
 ユグドラシルとしての権能を失う
 
 <img src="../images/units/52000611.png" alt="52000611.png" height="34"/>
