--- a/pages/2770082.md
+++ b/pages/2770082.md
@@ -323,7 +323,7 @@
 その帽子は？
 
 腰からつるした海賊帽に
-目をやる%(userName)s
+目をやる[ユーザー名]
 
 <img src="../images/units/602111.png" alt="602111.png" height="34"/>
 【リズベット】
@@ -355,14 +355,14 @@
 思うから…言うね
 
 アマテラスが、
-%(userName)sの
+[ユーザー名]の
 前に立つ
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
 こうしてここにいられるのも…
 あなたのおかげよ
-%(userName)s
+[ユーザー名]
 
 <img src="../images/units/302711.png" alt="302711.png" height="34"/>
 【アマテラス】
@@ -437,7 +437,7 @@
 
 静かに見つめていた帽子を
 ゆっくりと被る
-%(userName)s
+[ユーザー名]
 
 <img src="../images/units/100261.png" alt="100261.png" height="34"/>
 【レーヴァテイン】
