Add videos to story scripts

--- a/pages/100101011.md
+++ b/pages/100101011.md
@@ -42,6 +42,12 @@
 一言一句漏らさないように
 よーく聞きなさい！
 
+
+new_chapter_story
+
+<video controls src="https://github.com/user-attachments/assets/309872bc-b5dd-4019-a504-bcfd6f4f4805" type="video/mp4"></video>
+
+
 ![101_city_night3.png](../images/backgrounds/101_city_night3.png)
 
 <img src="../images/units/3103811.png" alt="3103811.png" height="34"/>
