--- a/pages/252003163.md
+++ b/pages/252003163.md
@@ -547,6 +547,12 @@
 幕を下ろしたのだった――
 
 
+denpa2021_pero
+
+<video controls src="https://github.com/user-attachments/assets/fbe2566e-5080-417f-9bad-b2d8c8f55dd7" type="video/mp4"></video>
+
+
+
 Next: [252003173](252003173.md)
 
 [Back to index](index.md)
