--- a/pages/252003173.md
+++ b/pages/252003173.md
@@ -5,6 +5,12 @@
 ![bg_black.png](../images/backgrounds/bg_black.png)
 
 
+denpa2021_nemopero
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8IZiKn0o-gQ?si=GexNxj52oqkntmWO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
 Next: [260011101](260011101.md)
 
 [Back to index](index.md)
