--- a/pages/2750012.md
+++ b/pages/2750012.md
@@ -317,6 +317,12 @@
 だから、胸を張って前に踏み出して！
 
 
+3Title_ending_movie
+
+<video controls src="https://github.com/user-attachments/assets/c49d94cb-1ead-4ffc-b6fd-43eaf2101a60" type="video/mp4"></video>
+
+
+
 Next: [2760001](2760001.md)
 
 [Back to index](index.md)
