--- a/pages/2770082.md
+++ b/pages/2770082.md
@@ -483,6 +483,12 @@
 幕を下した…
 
 
+gg2_3TitleCollabo_ending_movie_170720
+
+<video controls src="https://github.com/user-attachments/assets/de1ca42c-c85b-445e-a0c9-928d7dbdcad4" type="video/mp4"></video>
+
+
+
 Next: [2910011](2910011.md)
 
 [Back to index](index.md)
