--- a/pages/3501701.md
+++ b/pages/3501701.md
@@ -284,6 +284,12 @@
 向かうべきなのかもしれない…
 
 
+dempa_ending_movie
+
+<video controls src="https://github.com/user-attachments/assets/9f7f4e9c-49d0-4bd9-bbc8-fcef8011db6c" type="video/mp4"></video>
+
+
+
 Next: [3602521](3602521.md)
 
 [Back to index](index.md)
