--- a/pages/720061902.md
+++ b/pages/720061902.md
@@ -5,6 +5,12 @@
 ![bg_black.png](../images/backgrounds/bg_black.png)
 
 
+command_pv
+
+<video controls src="https://github.com/user-attachments/assets/0c3d2e31-6d0f-4668-a0d5-0c100cd73171" type="video/mp4"></video>
+
+
+
 Next: [720062301](720062301.md)
 
 [Back to index](index.md)
