--- a/pages/720081101.md
+++ b/pages/720081101.md
@@ -5,6 +5,18 @@
 ![bg_black.png](../images/backgrounds/bg_black.png)
 
 
+earth_prologue_1
+
+<video controls src="https://github.com/user-attachments/assets/fc8f5db9-39b2-4677-ad9c-ab07766a0974" type="video/mp4"></video>
+
+
+
+earth_prologue_2
+
+<video controls src="https://github.com/user-attachments/assets/aa31d7f7-5cbb-4fd7-827f-a9cf68b139e7" type="video/mp4"></video>
+
+
+
 Next: [720081301](720081301.md)
 
 [Back to index](index.md)
