--- a/pages/721031201.md
+++ b/pages/721031201.md
@@ -19,6 +19,12 @@
 新イベント
 [ff0000]軍団戦[-]リリース
 
+
+CorpsBattlePV
+
+<video controls src="https://github.com/user-attachments/assets/1060c289-6509-4853-922d-703c6d4ec954" type="video/mp4"></video>
+
+
 新ユニット登場
 
 新ユニット登場
