--- a/pages/721090101.md
+++ b/pages/721090101.md
@@ -75,6 +75,12 @@
 死から目を背けないで
 終焉の刻はまもなく訪れるわ
 
+
+TheEndPV
+
+<video controls src="https://github.com/user-attachments/assets/55230a44-4e1d-4826-803e-9f62e65e6e80" type="video/mp4"></video>
+
+
 -ディマイズフォーマー-
 ギャラルホルン
 
