--- a/pages/721100101.md
+++ b/pages/721100101.md
@@ -43,6 +43,12 @@
 …ふむ。死は安息、破滅は救済じゃ
 そう受け入れよ
 
+
+TheEndPV
+
+<video controls src="https://github.com/user-attachments/assets/55230a44-4e1d-4826-803e-9f62e65e6e80" type="video/mp4"></video>
+
+
 -ディマイズフォーマー-
 フリズスキャールヴ
 
