--- a/pages/721102301.md
+++ b/pages/721102301.md
@@ -6,6 +6,12 @@
 
 ![2nd_anniversary_mypage.png](../images/backgrounds/2nd_anniversary_mypage.png)
 
+
+7thAnivPV
+
+<video controls src="https://github.com/user-attachments/assets/2f057050-a6d2-49d0-8bab-df0a336a6b9b" type="video/mp4"></video>
+
+
 Phantom of the Kill
 [DC143C]7th Anniversary[-]
 
