--- a/pages/907100003.md
+++ b/pages/907100003.md
@@ -215,6 +215,12 @@
 この世界の未来のために
 
 
+earth_endroll
+
+<video controls src="https://github.com/user-attachments/assets/031e182e-b38f-46b9-af09-c42921678e37" type="video/mp4"></video>
+
+
+
 Next: [917060201](917060201.md)
 
 [Back to index](index.md)
