--- a/pages/241610433.md
+++ b/pages/241610433.md
@@ -56,6 +56,12 @@
 夢ではなく、過去の話を――
 
 
+TheEndPV
+
+<video controls src="https://github.com/user-attachments/assets/55230a44-4e1d-4826-803e-9f62e65e6e80" type="video/mp4"></video>
+
+
+
 Next: [241610510](241610510.md)
 
 [Back to index](index.md)
