--- a/pages/252003133.md
+++ b/pages/252003133.md
@@ -78,6 +78,12 @@
 さらなる運命とは……！？
 
 
+denpa2021_nemo
+
+<video controls src="https://github.com/user-attachments/assets/d3e93247-4b8f-4251-8c74-2557ad3419c5" type="video/mp4"></video>
+
+
+
 Next: [252003141](252003141.md)
 
 [Back to index](index.md)
