--- a/pages/720060401.md
+++ b/pages/720060401.md
@@ -38,6 +38,12 @@
 お知らせを要チェック！
 
 
+command_pv
+
+<video controls src="https://github.com/user-attachments/assets/0c3d2e31-6d0f-4668-a0d5-0c100cd73171" type="video/mp4"></video>
+
+
+
 Next: [720061201](720061201.md)
 
 [Back to index](index.md)
